12864
The code below
{code}
object test {
  def main(args: Array[String]) {
    Array.concat(args, Array("a")) // ok
  }
  def main0(args: String*) {
    Array.concat(args.toArray, Array("a")) // type mismatch
  }
}
{code}
produces the following type error:
{code}
scala> build/quick/bin/scalac -d /tmp test.scala
test.scala:6: error: type mismatch;
 found   : Array[java.lang.String]
 required: Array[Any]
    Array.concat(args.toArray, Array("a")) // type mismatch
                               ^
one error found
{code}

